pre code blocks - fix word wraps

--- a/assets/css/post-single.css
+++ b/assets/css/post-single.css
@@ -203,7 +203,8 @@
     font-size: .78em;
     line-height: 1.5;
     background: var(--code-bg);
-    border-radius: 2px
+    border-radius: 2px;
+    white-space: pre-wrap;
 }
 
 .post-content pre code {
@@ -213,7 +214,7 @@
     color: rgba(255, 255, 255, .8);
     background: 0 0;
     border-radius: 0;
-    overflow-x: auto
+    white-space: pre-wrap;
 }
 
 .post-content blockquote {
